# sw-flow-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_flow.py
app/: main.py
app/agent/: flow_generator.py  flow_matcher.py  intent_router.py  skill_registry.py
app/api/: routes.py  schemas.py
app/core/: config.py  llm.py
app/flow_engine/: executor.py  models.py
app/flow_engine/adapters/: base.py  llm_prompt.py  python_script.py
app/storage/: flow_repository.py
docs/: architecture.md  flow-skill编排对齐方案.md  flow_match机制.md  fow_全链路规划.md  project-plan.md  project-structure.md  场景1-匹配已有flow.md  场景2-自主编排flow.md  阶段一建设记录0319.md  阶段二mvp测试场景.md
flows/: earnings-commentary.md  market-environment-china.md  美国外汇市场动向分析.md  重磅事件与资金避险分析.md  重磅事件与避险分析.md
scripts/: doctor.py  test_api.py  test_llm.py
skills/bing_search/: SKILL.md
skills/bing_search/scripts/: search.py
skills/eastmoney-calendar/: SKILL.md  calendar_result.json
skills/eastmoney-calendar/scripts/: calendar_result.json  fetch_data.py
skills/industry-keywords/: SKILL.md
skills/industry-news-sentiment/: SKILL.md
skills/industry-news-sentiment/references/: examples.md  scoring-criteria.md
skills/market-environment/: SKILL.md
skills/market-environment/scripts/: generate_report.py
skills/sina-forex/: SKILL.md  _meta.json  skill.json
skills/sina-forex/scripts/: fetch_forex.py
skills/us-market-watch/: SKILL.md  _meta.json  skill.json
skills/us-market-watch/scripts/: fetch_us_market.py
ui/: index.html
